--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "nodemon ./src/index.js",
     "postinstall": "link-module-alias"
   },
-  "_moduleAliases":{
+  "_moduleAliases": {
     "@": "./src"
   },
   "repository": {
@@ -32,7 +32,8 @@
   },
   "homepage": "https://github.com/NicolasCorredor02/back-mega-stock#readme",
   "dependencies": {
-    "express": "^4.21.2",
+    "express": "^5.0.1",
+    "http-errors": "^2.0.0",
     "link-module-alias": "^1.2.0",
     "morgan": "^1.10.0"
   }
