fix: 🐛 Module aliases fixes & script module aliases

--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon ./src/index.js",
-    "postinstall": "link-module-alias"
+    "setup-alias": "link-module-alias"
   },
   "_moduleAliases": {
-    "@": "./src"
+    "root": "src"
   },
   "repository": {
     "type": "git",
