--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "express": "^5.0.1",
     "http-errors": "^2.0.0",
     "link-module-alias": "^1.2.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1"
   }
 }
