--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "http-errors": "^2.0.0",
     "link-module-alias": "^1.2.0",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "uuid": "^11.1.0"
   }
 }
