--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "link-module-alias": "^1.2.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "socket.io": "^4.8.1",
     "uuid": "^11.1.0"
   }
 }
