--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,10 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
+package-log.json
 
 node_modules
+.env
 dist
 dist-ssr
 *.local
