--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "http-errors": "^2.0.0",
     "link-module-alias": "^1.2.0",
     "mongoose": "^8.11.0",
+    "mongoose-aggregate-paginate-v2": "^1.1.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
