--- a/package.json
+++ b/package.json
@@ -32,12 +32,15 @@
   },
   "homepage": "https://github.com/NicolasCorredor02/back-mega-stock#readme",
   "dependencies": {
-    "cloudinary": "^2.5.1",
+    "cloudinary": "1.41.3",
+    "connect-mongo": "^5.1.0",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
     "express": "^5.0.1",
     "express-handlebars": "^8.0.1",
-    "http-errors": "^2.0.0",
+    "express-session": "^1.18.1",
     "link-module-alias": "^1.2.0",
+    "mongodb": "^6.15.0",
     "mongoose": "^8.11.0",
     "mongoose-aggregate-paginate-v2": "^1.1.4",
     "morgan": "^1.10.0",
