--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "homepage": "https://github.com/NicolasCorredor02/back-mega-stock#readme",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cloudinary": "1.41.3",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.7",
@@ -46,6 +47,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "socket.io": "^4.8.1",
     "uuid": "^11.1.0"
   },
