Feat: Google passport auth dependences an env implemented

--- a/.env-example
+++ b/.env-example
@@ -8,3 +8,15 @@ CLOUDINARY_API_SECRET
 
 # Otros (opcional)
 NODE_ENV=development
+
+
+# Admin credentials
+ADMIN_EMAIL
+ADMIN_PASSWORD
+
+# MongoStore vals
+MONGO_STORE_SECRET
+
+# Google Strategy
+GOOGLE_CLIENT_ID
+GOOGLE_CLIENT_SECRET
