--- a/.env-example
+++ b/.env-example
@@ -7,8 +7,10 @@ CLOUDINARY_API_KEY
 CLOUDINARY_API_SECRET
 
 # Otros (opcional)
-NODE_ENV=development
+NODE_ENV
 
+# JWT
+JWT_SECRET
 
 # Admin credentials
 ADMIN_EMAIL
