--- a/package.json
+++ b/package.json
@@ -34,14 +34,12 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cloudinary": "1.41.3",
-    "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
     "express": "^5.0.1",
     "express-handlebars": "^8.0.1",
-    "express-session": "^1.18.1",
+    "jsonwebtoken": "^9.0.2",
     "link-module-alias": "^1.2.0",
-    "mongodb": "^6.15.0",
     "mongoose": "^8.11.0",
     "mongoose-aggregate-paginate-v2": "^1.1.4",
     "morgan": "^1.10.0",
@@ -49,7 +47,7 @@
     "multer-storage-cloudinary": "^4.0.0",
     "passport": "^0.7.0",
     "passport-google-oauth": "^2.0.0",
-    "passport-local": "^1.0.0",
+    "passport-jwt": "^4.0.1",
     "socket.io": "^4.8.1",
     "uuid": "^11.1.0"
   },
