--- a/package.json
+++ b/package.json
@@ -7,7 +7,17 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node --watch ./src/index.js",
-    "setup-alias": "link-module-alias"
+    "setup-alias": "link-module-alias",
+
+
+    "db:mysql:migrate": "dotenv -e .env -- npx prisma migrate dev --schema=./prisma/prisma-mysql/schema.prisma",
+    "db:mysql:push": "dotenv -e .env -- npx prisma db push --schema=./prisma/prisma-mysql/schema.prisma",
+    "db:mysql:studio": "dotenv -e .env -- npx prisma studio --schema=./prisma/prisma-mysql/schema.prisma",
+    "db:mysql:generate": "dotenv -e .env -- npx prisma generate --schema=./prisma/prisma-mysql/schema.prisma",
+    
+    "db:mongodb:push": "dotenv -e .env -- npx prisma db push --schema=./prisma/prisma-mongodb/schema.prisma",
+    "db:mongodb:studio": "dotenv -e .env -- npx prisma studio --schema=./prisma/prisma-mongodb/schema.prisma",
+    "db:mongodb:generate": "dotenv -e .env -- npx prisma generate --schema=./prisma/prisma-mongodb/schema.prisma"
   },
   "_moduleAliases": {
     "root": "src"
@@ -32,6 +42,7 @@
   },
   "homepage": "https://github.com/NicolasCorredor02/back-mega-stock#readme",
   "dependencies": {
+    "@prisma/client": "^6.7.0",
     "bcrypt": "^5.1.1",
     "cloudinary": "1.41.3",
     "cookie-parser": "^1.4.7",
@@ -52,6 +63,7 @@
     "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "prisma": "^6.7.0",
     "standard": "^17.1.2"
   },
   "eslintConfig": {
