--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,7 @@ MONGO_STORE_SECRET
 # Google Strategy
 GOOGLE_CLIENT_ID
 GOOGLE_CLIENT_SECRET
+
+# Prisma vals
+DATABASE_URL_MYSQL
+DATABASE_URL_MONGODB
