--- a/package.json
+++ b/package.json
@@ -8,13 +8,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node --watch ./src/index.js",
     "setup-alias": "link-module-alias",
-
-
     "db:mysql:migrate": "dotenv -e .env -- npx prisma migrate dev --schema=./prisma/prisma-mysql/schema.prisma",
     "db:mysql:push": "dotenv -e .env -- npx prisma db push --schema=./prisma/prisma-mysql/schema.prisma",
     "db:mysql:studio": "dotenv -e .env -- npx prisma studio --schema=./prisma/prisma-mysql/schema.prisma",
     "db:mysql:generate": "dotenv -e .env -- npx prisma generate --schema=./prisma/prisma-mysql/schema.prisma",
-    
     "db:mongodb:push": "dotenv -e .env -- npx prisma db push --schema=./prisma/prisma-mongodb/schema.prisma",
     "db:mongodb:studio": "dotenv -e .env -- npx prisma studio --schema=./prisma/prisma-mongodb/schema.prisma",
     "db:mongodb:generate": "dotenv -e .env -- npx prisma generate --schema=./prisma/prisma-mongodb/schema.prisma"
@@ -49,6 +46,7 @@
     "dotenv": "^16.4.7",
     "express": "^5.0.1",
     "express-handlebars": "^8.0.1",
+    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "link-module-alias": "^1.2.0",
     "mongoose": "^8.11.0",
