Feat: add Nodemailer dependency and update README with environment variables and API endpoints

--- a/.env.example
+++ b/.env.example
@@ -27,3 +27,13 @@ GOOGLE_CLIENT_SECRET
 # Prisma vals
 DATABASE_URL_MYSQL
 DATABASE_URL_MONGODB
+
+#Seleccion de factory como DB provider
+#mysql or mongodb
+DB_PROVIDER
+
+#Credenciales para NodeMailer y emailService
+EMAIL_HOST
+EMAIL_PORT
+EMAIL_USER
+EMAIL_PASS
